objects/ACE_Customer_Price_Changes__c.object
<CustomObject>
    <fields>
        <fullName>Owning_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cust ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Legal__c</fullName>
        <label>Governed By Written Agreement (T/F)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE_NOT_CALCULATED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRICE_NOT_CALCULATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Key__c</fullName>
        <description>This key is used in sites to validate incoming customer</description>
        <label>Page Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Exception_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to Store Previous Exception Days</description>
        <label>Previous Exception Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Exception_Impact__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to store previous date exception impact.</description>
        <label>Previous Exception Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_New_List_Less_Disc_Without_Cap__c</fullName>
        <formula>IF( OR(New_List_Price__c !=0,New_List_Price__c !=null) , (New_List_Price__c - Approved_Proposed_Price__c)/New_List_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed New List Less Disc% Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_Without_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate of the Proposed Price Without Cap</description>
        <label>Proposed Price Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_with_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Proposed Price with Cap Aggrigate</description>
        <label>Proposed Price with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed SRM $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap__c</fullName>
        <formula>IF( OR(Approved_Proposed_Price__c !=0,Approved_Proposed_Price__c !=null) , Proposed_SRM_with_Cap1__c/Approved_Proposed_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed SRM% with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed WAPO Margin $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap__c</fullName>
        <formula>IF( OR(Approved_Proposed_Price__c !=0,Approved_Proposed_Price__c !=null) , Proposed_WAPO_Margin_with_Cap1__c/Approved_Proposed_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed WAPO Margin % with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Core_Price_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Lock_Code__c</fullName>
        <label>Record Lock Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record_Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Unlock_Status__c</fullName>
        <description>To Capture the status of the record unlock request</description>
        <label>Record Unlock Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Unlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record_Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Customer__r.Owner.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remediation_End_Date__c</fullName>
        <label>Remediation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remediation_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag if marked true will not allow data to be released to vendavo. The flag will be unset when the data is loaded back in by remediation team.</description>
        <label>Remediation Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remediation_Request_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remediation Request User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Core_Price_Changes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remediation_Start_Date__c</fullName>
        <label>Remediation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remediation_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(Remediation_Start_Date__c)),NOT(ISNULL(Remediation_End_Date__c))),Remediation_End_Date__c-Remediation_Start_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remediation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemedyResp_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remediation Response User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Core_Price_Changes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remedy_Status__c</fullName>
        <label>Remediation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_New_Gross_IGM_ACE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reports</description>
        <label>Report New Gross IGM ACE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_SKU_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Report SKU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Total_Spend_Impact_12_Month_ACE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reports</description>
        <label>Report Total Spend Impact 12 Month ACE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Total_Spend_Impact_12_Month_C_Typ__c</fullName>
        <description>Report field for SKUs change type of C type</description>
        <label>Report_Total_Spend_Impact_12_Month_C_Typ</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Report_Total_Spend_Impact_12_Month_C_Typ__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Total_Spend_Impact_12_Month_M_Typ__c</fullName>
        <description>Report filed for Margin&amp;Revenue overview report to shoe SKUs of &apos;M&apos; change type</description>
        <label>Report_Total_Spend_Impact_12_Month_M_Typ</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Report_Total_Spend_Impact_12_Month_M_Typ__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_isSKU_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report  isSKU Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Date_Modified_By_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Date Modified By Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Field_Delay__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Min__c &gt; Sales_Price_Change_Effective_Date__c, (Total_Spend_Impact_12_Month__c/365)*(Sales_Price_Change_Effective_Date_Min__c - Sales_Price_Change_Effective_Date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Field Delay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Field_MarkDown__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_CAP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Margin CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_Field_Delay__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Min__c &gt; Sales_Price_Change_Effective_Date__c, (SRM_Differential__c/365)*(Sales_Price_Change_Effective_Date_Min__c - Sales_Price_Change_Effective_Date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin Field Delay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_Field_MarkDown__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Margin Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_Vendor_Letter__c</fullName>
        <description>Used in Erosion Report to calculate Margin lost due to vendor letters</description>
        <formula>IF( Vendor_OEM_Letters_Required__c == &apos;Yes&apos;,Reporting_Erosion_Margin__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin Vendor Letter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_WA_Timing__c</fullName>
        <description>Used In Erosion Report for Margin Erosion on Timing</description>
        <formula>IF( Update_Timing_Action__c == &apos;F&apos;,Reporting_Erosion_Margin__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin WA Timing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue_CAP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Revenue CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue_Vendor_Letter__c</fullName>
        <description>Used in Erosion Reporting for Vendor Letter Requirement</description>
        <formula>IF(  Vendor_OEM_Letters_Required__c  == &apos;Yes&apos;, Reporting_Erosion_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Revenue Vendor Letter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue_WA_Timing__c</fullName>
        <description>This field is used in Erosion Report to capture amount lost due to WA Timing</description>
        <formula>IF( Update_Timing_Action__c == &apos;F&apos;, Reporting_Erosion_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Revenue WA Timing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reporting Erosion Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Exception_Margin_Field_Delay__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Rep__c &gt; Sales_Price_Change_Effective_Date__c, (SRM_Differential__c/365)*(Sales_Price_Change_Effective_Date_Rep__c - Sales_Price_Change_Effective_Date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exception Margin Field Delay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Exception_Revenue_Field_Delay__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Rep__c &gt; Sales_Price_Change_Effective_Date__c, (Total_Spend_Impact_12_Month__c/365)*(Sales_Price_Change_Effective_Date_Rep__c - Sales_Price_Change_Effective_Date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exception Revenue Field Delay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_ExposureDaysEarly_Sale_Erosion__c</fullName>
        <label>Reporting ExposureDaysEarly Sale Erosion</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Reporting_ExposureDaysEarly_Sale_Erosion__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reporting_Exposure_Days_Initial__c</fullName>
        <label>Reporting Exposure Days Initial</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Reporting_Exposure_Days_Initial__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reporting_Exposure_Days_Sale_Erosion__c</fullName>
        <label>Reporting Exposure Days Sale Erosion</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Reporting_Exposure_Days_Sale_Erosion__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reporting_sales_price_Effective_Change__c</fullName>
        <formula>Sales_Price_Change_Effective_Date_Min__c &gt; Sales_Price_Change_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting sales price Effective Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirement_Window__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days of Notice Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reschduled_For_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will capture if the notification date or sales price effective date has been modified by batch job for reminder or escalation</description>
        <label>Reschduled For Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Notification_Flag__c</fullName>
        <label>SFDC Notification Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKUCount__c</fullName>
        <label>SKU Count</label>
        <summarizedField>Ace_Customer_Core_Changes__c.SKUcount__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SKU_Approval_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to track the related sku&apos;s approval status</description>
        <label>SKU Approval Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_Count__c</fullName>
        <label># Impacted SKUs</label>
        <summarizedField>Ace_Customer_Core_Changes__c.SKUcount__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SKU_Revenue_Impact__c</fullName>
        <label>SKU Revenue Impact</label>
        <summarizedField>Ace_Customer_Core_Changes__c.SKU_Revenue_Impact__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SRM_Basis_Point_Increase__c</fullName>
        <formula>Proposed_SRM_with_Cap__c-Old_WATD_SRM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRM Basis Point Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SRM_Differential__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SRM Differential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Approv__c</fullName>
        <description>Sales Price Change Effective Date Approved</description>
        <label>Effective Date Max</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Min__c</fullName>
        <description>This holds the min value of the sales price effective date for the SKUs</description>
        <label>Price Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Rep__c</fullName>
        <label>Sales Price Change Effective Date Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date__c</fullName>
        <description>This will be rollup from the SKU&apos;s directly</description>
        <label>Sales Price Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Total Annual Spend Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Spend Impact 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Spend Impact 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_Percent__c</fullName>
        <formula>IF(OR(Item_12_Month_Sales__c == NULL,Item_12_Month_Sales__c == 0),0,(Total_Spend_Impact_12_Month__c/Item_12_Month_Sales__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average SKU Increase Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UI_Date_Temp__c</fullName>
        <description>This is a temporary field used for rendering date on UI</description>
        <label>UI Date Temp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Timing_Action__c</fullName>
        <label>Update Timing Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Vendavo_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by the batch job to update the vendavo date at the sku level</description>
        <label>Update Vendavo Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Core_Price_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_OEM_Letters_Required__c</fullName>
        <label>Vendor/OEM Letters Required</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAPO_Cost_Change__c</fullName>
        <formula>IF( OR(Old_WAPO__c !=0,Old_WAPO__c !=null) , (New_WAPO_Cost__c-Old_WAPO__c)/Old_WAPO__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WAPO Cost % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WATD Cost $ Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change__c</fullName>
        <formula>IF( OR(Old_WATD__c !=0,Old_WATD__c !=null) , (New_WATD_Cost__c-Old_WATD__c)/Old_WATD__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WATD Cost % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>batchId__c</fullName>
        <label>batchId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer Core Price Changes</label>
    <nameField>
        <label>Batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Core Price Changes</pluralLabel>
    <recordTypes>
        <fullName>Awaiting_Customer_Response</fullName>
        <active>true</active>
        <label>Awaiting Customer Response</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compliance_Review</fullName>
        <active>false</active>
        <label>Compliance Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Released</fullName>
        <active>false</active>
        <label>Released</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rep_Final</fullName>
        <active>false</active>
        <label>Rep Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rep_Initial</fullName>
        <active>true</active>
        <label>Rep Initial</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Owning_Customer_ID__c ) &amp;&amp; ($User.ProfileId != &apos;System Administrator&apos; || $User.ProfileId != &apos;System Administrator API&apos; 
|| $User.ProfileId != &apos;System Administrator 2&apos;)</errorConditionFormula>
        <errorDisplayField>Owning_Customer_ID__c</errorDisplayField>
        <errorMessage>Customer cannot be modified</errorMessage>
    </validationRules>
</CustomObject>